Fixed two-line persona truncating, selected item spacing, suggested item coloration, and high contrast support.

--- a/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
+++ b/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
@@ -382,6 +382,7 @@ $ms-Persona-presenceSizeXl: 28px;
       display: block;
       height: 16px;
       line-height: 16px;
+      overflow: visible;
     }
   }
 }
@@ -441,6 +442,7 @@ $ms-Persona-presenceSizeXl: 28px;
       display: block;
       line-height: 16px;
       height: 16px;
+      overflow: visible;
     }
   }
 }
@@ -489,6 +491,7 @@ $ms-Persona-presenceSizeXl: 28px;
       display: block;
       height: 16px;
       line-height: 16px;
+      overflow: visible;
     }
   }
 }
