--- a/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/BasePicker.scss
@@ -18,7 +18,7 @@
 }
 
 .pickerInput {
-  height: 26px;
+  height: 34px;
   border: none;
   flex-grow: 1;
   outline: none;
