--- a/packages/office-ui-fabric-react/src/components/pickers/PeoplePicker/PeoplePickerItems/PickerItemsDefault.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/PeoplePicker/PeoplePickerItems/PickerItemsDefault.scss
@@ -1,12 +1,12 @@
 @import '../../../../common/common';
 
 .personaContainer {
-  @include focus-border();
+  @include focus-border(-2px);
   border-radius: 15px;
   display: inline-flex;
   align-items: center;
   background: $ms-color-neutralLighter;
-  margin: 1px 2px;
+  margin: 4px;
   cursor: default;
   user-select: none;
   max-width: 300px;
@@ -38,6 +38,18 @@
         background: $ms-color-themeDark;
       }
     }
+
+    @media screen and (-ms-high-contrast: active) {
+    border: 1px solid $ms-color-themePrimary;
+    }
+  }
+
+  @media screen and (-ms-high-contrast: active) {
+    border: 1px solid $ms-color-white;
+  }
+
+  @media screen and (-ms-high-contrast: black-on-white) {
+    border: 1px solid $ms-color-black;
   }
 
   .itemContent {
